[gd_scene load_steps=14 format=3 uid="uid://c1nibajbliejv"]

[ext_resource type="Script" uid="uid://lcie51d5et3t" path="res://scripts/main_menu.gd" id="1_vgdyc"]
[ext_resource type="PackedScene" uid="uid://bagy2d7yjtvmv" path="res://scenes/floating_symbols.tscn" id="2_uj2gi"]
[ext_resource type="FontFile" uid="uid://kxshfrilu1ou" path="res://fonts/PixelOperator8.ttf" id="3_sjius"]
[ext_resource type="FontFile" uid="uid://cveqkmv7qgt3b" path="res://fonts/PixelOperator8-Bold.ttf" id="4_tcsbu"]
[ext_resource type="AudioStream" uid="uid://c4oso5et5o36q" path="res://sfx/Oppressive Gloom.mp3" id="5_k1kgf"]
[ext_resource type="AudioStream" uid="uid://cjddc7ckfa4xc" path="res://sfx/clicking_sound.wav" id="6_xejpm"]
[ext_resource type="PackedScene" uid="uid://hnewpyu7723f" path="res://scenes/Fade_anim.tscn" id="7_b2h4l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.203922, 0.384314, 0.247059, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.779291, 0.779291, 0.779291, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(1.63645e-06, 0.53461, 0.538672, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(0.963782, 0.866012, 0.611656, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgdyc"]
bg_color = Color(0.964706, 0.866667, 0.611765, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_vgdyc")

[node name="background_color" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -678.0
offset_top = -387.0
offset_right = 754.0
offset_bottom = 387.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l6cm7")

[node name="floating_symbols_list" type="Node2D" parent="."]

[node name="floating_symbols" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols2" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols3" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols4" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols5" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols6" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols7" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols8" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols9" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols10" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols11" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols12" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols13" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols14" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols15" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="floating_symbols16" parent="floating_symbols_list" instance=ExtResource("2_uj2gi")]
position = Vector2(-421, -115)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 306.0
offset_top = 156.0
offset_right = 619.0
offset_bottom = 339.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sjius")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "DO IT AGAIN"

[node name="credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sjius")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "CREDITS"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sjius")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -582.0
offset_top = -317.0
offset_right = 638.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -7
theme_override_constants/shadow_offset_y = 7
theme_override_fonts/font = ExtResource("4_tcsbu")
theme_override_font_sizes/font_size = 48
text = "You Bisc'uit your all and you won. 

There is nothing but respect I can give you.

You're nothing like those people who could'nt finish the game"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -639.0
offset_top = 241.0
offset_right = -151.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("4_tcsbu")
theme_override_font_sizes/font_size = 16
text = "Of course its all JOKES, Thank you to everyone who played my game"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -639.0
offset_top = 293.0
offset_right = -151.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("4_tcsbu")
theme_override_font_sizes/font_size = 16
text = "Don't forget to rate my game from itch.io"
horizontal_alignment = 1
autowrap_mode = 2

[node name="main_menu_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k1kgf")
volume_db = -15.0
autoplay = true
parameters/looping = true

[node name="Button_click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xejpm")

[node name="CreditsScreen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CreditsScreen"]
layout_mode = 0
offset_left = -528.0
offset_top = -249.0
offset_right = 568.0
offset_bottom = 184.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.47788, 0.47788, 0.47788, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("4_tcsbu")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vgdyc")
text = " 
 SPECIAL THANKS TO:
 
 Ilyas RAHMANOV for helping with idea/planning, 
 
 Other friends who helped me with playtesting,

 My family for being supportive and 
 being an amazing family,
 
 And of course Brackeys for hosting this Game Jam"
autowrap_mode = 3

[node name="back" type="Button" parent="CreditsScreen"]
offset_left = 263.0
offset_top = 76.0
offset_right = 515.0
offset_bottom = 147.0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sjius")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "BACK"

[node name="Fade_transition" parent="." instance=ExtResource("7_b2h4l")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -697.0
offset_top = -406.0
offset_right = 664.0
offset_bottom = 406.0
grow_horizontal = 1
grow_vertical = 1

[node name="Fade_timer" type="Timer" parent="Fade_transition"]

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CreditsScreen/back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="Fade_transition/Fade_timer" to="." method="_on_fade_timer_timeout"]
